fix word wrap and sort my questions by newest

--- a/public/css/forum/questions/index.css
+++ b/public/css/forum/questions/index.css
@@ -12,3 +12,9 @@
     border-right: 3px solid #f48024;
     font-weight: bold;
 }
+.quecontent{
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
