--- a/public/css/forum/questions/show.css
+++ b/public/css/forum/questions/show.css
@@ -9,3 +9,6 @@
     border-right: 3px solid #f48024;
     font-weight: bold;
 }
+.quetitle, .quecontent, .anscontent, .comcontent{
+    word-wrap: break-word;
+}
